--- a/assets/less/_global.less
+++ b/assets/less/_global.less
@@ -148,7 +148,7 @@ hr.star-primary:after {
 
 @media(min-width:768px) {
     .navbar-fixed-top {
-        padding: 25px 0;
+ /*       padding: 25px 0;   */
         -webkit-transition: padding 0.3s;
         -moz-transition: padding 0.3s;
         transition: padding 0.3s;
