--- a/assets/less/_variables.less
+++ b/assets/less/_variables.less
@@ -1,3 +1,8 @@
+// Grid settings
+// -------------------------
+
+@main-sm-columns:       @grid-columns;
+@sidebar-sm-columns:    4;
 
 // Glyphicons path
 // -------------------------
