--- a/assets/less/_global.less
+++ b/assets/less/_global.less
@@ -210,8 +210,8 @@ hr.star-primary:after {
    }
 }
 
-.main.col-sm-8 {
-    border-right: 1px dashed #222222;
+.sidebar {
+    border-left: 1px dashed #222222;
 }
 
 .wrap.container {
@@ -292,10 +292,10 @@ hr.star-primary:after {
 
 h1.headerfp {
 font-style: normal;
-font-size: 78px;
-font-weight: 700;
+font-size: 50px;
+font-weight: 900;
 line-height: 0.8;
-text-shadow: 0px 2px 2px #464F5A;
+text-shadow: 0px 4px 4px #464F5A;
 color: #FFF;
 font-family: "Tungsten UI 7r","Tungsten UI A","Tungsten UI B","Lucida Grande","Lucida Sans",Verdana,Helvetica,Arial,sans-serif;
 }
@@ -325,6 +325,10 @@ h2 {
 strong {
     font-weight: bold;
 }
+}
+
+p.mbot1 {
+  font-size: 1.4em;
 }
 
 /* ==========================================================================
