--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /*
-Theme Name:         Redhotroots new Theme
+Theme Name:         Redhotroots
 Theme URI:          http://roots.io/starter-theme/
 Description:        Roots is a WordPress starter theme based on HTML5 Boilerplate & Bootstrap. <a href="https://github.com/roots/roots/contributors">Contribute on GitHub</a>
-Version:            7.0.0
+Version:            7.0.1
 Author:             Chris
 Author URI:         http://roots.io/
 
